k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: scalable-app
  labels:
    app.kubernetes.io/part-of: scalable-app
